[gd_scene load_steps=4 format=2]

[ext_resource path="res://console/ConsoleNode.gd" type="Script" id=1]
[ext_resource path="res://console/ConsolePanel.gd" type="Script" id=2]
[ext_resource path="res://console/RichTextLabel.gd" type="Script" id=3]

[node name="ConsoleNode" type="Node2D"]
script = ExtResource( 1 )

[node name="ConsoleContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 400.0
size_flags_horizontal = 11
size_flags_vertical = 11

[node name="ConsolePanel" type="Panel" parent="ConsoleContainer"]
margin_right = 1024.0
margin_bottom = 372.0
size_flags_horizontal = 11
size_flags_vertical = 11
script = ExtResource( 2 )

[node name="ConsoleRichTextLabel" type="RichTextLabel" parent="ConsoleContainer/ConsolePanel"]
margin_left = 10.0
margin_top = 8.0
margin_right = 1013.0
margin_bottom = 366.0
size_flags_horizontal = 11
size_flags_vertical = 11
bbcode_enabled = true
bbcode_text = "this is
multiline
text
"
text = "this is
multiline
text
"
script = ExtResource( 3 )

[node name="ConsoleLineEdit" type="LineEdit" parent="ConsoleContainer"]
margin_top = 376.0
margin_right = 1024.0
margin_bottom = 400.0
size_flags_horizontal = 11
size_flags_vertical = 9
[connection signal="visibility_changed" from="ConsoleContainer/ConsolePanel" to="ConsoleContainer/ConsolePanel" method="_on_Panel_visibility_changed"]
[connection signal="text_entered" from="ConsoleContainer/ConsoleLineEdit" to="ConsoleContainer/ConsolePanel/ConsoleRichTextLabel" method="_on_ConsoleLineEdit_text_entered"]
